# maia

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION_PLAN.md  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  SUPPORT.md  desktopctl.sh  generate_heartbeat_demo.py  index.html  package-lock.json  package.json  tropical_log_gen.py  verify_ai_glitch.py  verify_hybrid_glitch.py  verify_hybrid_remix.py  verify_normal_log.py  verify_real_crash.py  vite.config.ts
.claude/commands/: ui-review.md
.codex/: config.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_improvement.md  feature_request.md
.github/workflows/: deploy.yml  quality.yml
.run/: desktop-dev.pid  desktop.pid
.superpowers/sdd/: progress.md
.vite/vitest/: results.json
analyzer/: Makefile  audio_analyzer.py  cli.py  contracts.py  database.py  pyproject.toml  repo_analyzer.py  requirements-dev.txt  requirements.txt
analyzer/fixtures/jakarta-sample/: pom.xml
analyzer/fixtures/jakarta-sample/src/main/java/com/example/app/: AppService.java  HealthResource.java
analyzer/src/maia_analyzer/: assets.py  audio.py  cli.py  composition.py  contracts.py  dsp.py  presets.py  repository.py  separator.py  service.py  stream.py  treesitter.py
analyzer/src/maia_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
analyzer/src/maia_analyzer/future/: __init__.py  assets.py  composition.py  repository.py
analyzer/tests/: fixtures.py  test_assets.py  test_audio.py  test_cli.py  test_contracts.py  test_golden_analysis.py  test_repository.py  test_schema_validation.py  test_service.py  test_stream.py  test_treesitter.py
analyzer/tests/future/: test_composition.py  test_repository.py  test_treesitter.py
contracts/: analyzer-request.schema.json  analyzer-response.schema.json  musical_asset_schema.json
database/: schema.sql
demo/: README.md
desktop/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
desktop/.claude/: settings.json
desktop/scratch/: log_injector.py
desktop/scripts/: start-vite-dev.sh
desktop/src/: App-v0.tsx  App.tsx  AppContentShell.tsx  AppCurateSection.tsx  AppSectionContent.tsx  AppSessionSection.tsx  AppUI.tsx  AppV0SectionContent.tsx  AppV0SectionRenderer.tsx  appContentRuntime.ts  appContentStatusRuntime.ts  appMonitorActionsRuntime.ts  appRuntime.ts  appSectionContentPropsRuntime.ts  appSectionContentRuntime.ts  appSessionRepositoryRuntime.ts  appShellPropsRuntime.ts  appShellRuntime.ts  main.tsx  (+22 more)
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: code_project_scanner.rs  code_project_stream.rs  main.rs  sonarqube_adapter.rs  sonarqube_client.rs
docs/: ai-roadmap.md  architecture.md  decisions.md  demo-assets-and-fixtures.md  frontend-architecture.md  github-publish-checklist.md  music-integrations-open-standards.md  open-source-maintainer-guide.md  pre-release-manual-test-plan.md  sdd.md  signal-streams-roadmap.md  sonarqube-adapter-proposal.md  stream-input-ui-refactor.md  testing-and-quality.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  manifest.json
scripts/: README.md
site/: eslint.config.mjs  index.html  package-lock.json  package.json  wrangler.toml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
systemd/: paperclip.service
tests/: test_contracts.py  test_database.py  test_repo_analyzer.py
(+1942 files in other folders)
