[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "maia-analyzer"
version = "0.1.0"
description = "Local JSON analyzer for Maia desktop"
requires-python = ">=3.11"
dependencies = [
	"miniaudio>=1.61,<2",
	"tree-sitter>=0.22,<1",
	"tree-sitter-java>=0.23,<1",
	"tree-sitter-kotlin>=1.0,<2",
]

[project.scripts]
maia-analyzer = "maia_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
