[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "maia-analyzer"
version = "0.1.0"
description = "Local JSON analyzer for Maia desktop"
requires-python = ">=3.11"
dependencies = [
	"miniaudio>=1.61,<2",
	"tree-sitter>=0.22,<1",
	"tree-sitter-java>=0.23,<1",
	"tree-sitter-kotlin>=1.0,<2",
	"librosa>=0.10,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
maia-analyzer = "maia_analyzer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
