[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "maia-analyzer"
version = "0.1.0"
description = "Local JSON analyzer for Maia desktop"
requires-python = ">=3.11"
dependencies = [
	"miniaudio>=1.61,<2",
	"tree-sitter>=0.22,<1",
	"tree-sitter-java>=0.23,<1",
	"tree-sitter-kotlin>=1.0,<2",
	"tree-sitter-python>=0.23,<1",
	"tree-sitter-typescript>=0.23,<1",
	"tree-sitter-rust>=0.23,<1",
	"tree-sitter-go>=0.23,<1",
	"librosa>=0.10,<1",
	"demucs>=4.0.0,<5",
	"torch>=2.4.0",
	"lameenc>=1.7.0",
	"scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "jsonschema[format-nongpl]>=4.23",
]

[project.scripts]
maia-analyzer = "maia_analyzer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["maia_analyzer"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
