[package]
name = "maia-desktop"
version = "0.1.0"
description = "Local-first desktop shell for Maia"
authors = ["Fabian Aguero"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
